--- a/source/localizable/_about.html.erb
+++ b/source/localizable/_about.html.erb
@@ -2,7 +2,7 @@
   <h2>
     <%= I18n.t("about.title") %>:
   </h2>
-  <% data.curriculum.about.each do |item| %>
+  <% data.person.about.each do |item| %>
     <p>
       <%= item %>
     </p>
