--- a/source/localizable/_education.html.erb
+++ b/source/localizable/_education.html.erb
@@ -3,7 +3,7 @@
     <%= I18n.t("education.title") %>
   </h2>
   <ul>
-    <% data.curriculum.education.colleges.each do |college| %>
+    <% data.education.colleges.each do |college| %>
     <li>
 
       <%= college.dates.start %>
