--- a/source/localizable/_languages.html.erb
+++ b/source/localizable/_languages.html.erb
@@ -3,7 +3,7 @@
     <%= I18n.t("languages.title") %>
   </h2>
   <ul>
-    <% data.curriculum.languages.each do |language| %>
+    <% data.languages.each do |language| %>
       <li>
         <span class="language-name">
           <%= language.name %>
