include google analytics

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -12,5 +12,6 @@
   <%= yield %>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
   <%= javascript_include_tag  "scripts" %>
+  <%= partial "google-analytics" %>
 </body>
 </html>
