--- a/source/assets/stylesheets/_education.sass
+++ b/source/assets/stylesheets/_education.sass
@@ -1,9 +1,14 @@
 #education
   +span-columns(8)
   ul
+    margin: 1rem 0 2rem 0
   li
     +row
     margin-bottom: .5rem
+    padding-bottom: .5rem
+    border-bottom: 1px solid lighten($color4, 20%)
+    &:last-child
+      border-bottom: none
   .course-institution
     +span-columns(6 of 8)
     .course
@@ -19,5 +24,6 @@
   .dates
     +span-columns(2 of 8)
     color: $color6
+    text-align: right
   .label
     display: none
