--- a/source/assets/stylesheets/_interests.sass
+++ b/source/assets/stylesheets/_interests.sass
@@ -6,10 +6,8 @@
     list-style: none
   li
     line-height: 1.5rem
-  .language-name
-    color: $color5
+    padding-left: 1rem
     &:before
       content: ">"
-    &:after
-      content: ":"
-  .language-proficiency
+      color: $color5
+      margin: 0 0 0 -1rem
