--- a/source/assets/stylesheets/_experience.sass
+++ b/source/assets/stylesheets/_experience.sass
@@ -7,8 +7,8 @@
     &>li
       border: 1px solid lighten($color5, 20%)
       position: relative
-      padding: .3rem
-      margin-bottom: .5rem
+      padding: .5rem
+      margin-bottom: .7rem
       border-radius: .2rem
       page-break-inside: avoid
       &:hover
@@ -51,6 +51,7 @@
   ul
     clear: both
     list-style: none
+    padding-top: .6rem
     li
       margin-bottom: .3rem
       color: $color8
