hide address, change text

--- a/source/assets/stylesheets/_header.sass
+++ b/source/assets/stylesheets/_header.sass
@@ -20,18 +20,18 @@
   #header-info
     +span-columns(4)
     font-size: .8rem
-    color: $color7
+    color: #fff
 
     .label
       font-size: .6rem
       display: block
-      color: $color2
+      color: #ddd
 
     .info
       margin-bottom: .3rem
 
     a
-      color: $color7
+      color: #fff
 
 #border-header
   height: 2rem
