--- a/source/_google-analytics.html.erb
+++ b/source/_google-analytics.html.erb
@@ -4,7 +4,7 @@
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', '<%= data.config.google_analytics.id%>', '<%= data.config.google_analytics.url%>');
+  ga('create', '<%= data.config.google_analytics.uid%>', '<%= data.config.google_analytics.url%>');
   ga('send', 'pageview');
 </script>
 <% end %>
