--- a/source/localizable/_header.html.erb
+++ b/source/localizable/_header.html.erb
@@ -7,7 +7,11 @@
     <p>
       <%= I18n.t("person.jobTitle") %>
       <span itemprop="jobTitle">
-        <%= data.person.jobTitle %>
+        <% data.person.resumeHeadline.each do |item| %>
+          <p>
+          <%= item %>
+          </p>
+        <% end %>
       </span>
     </p>
   </div>
