--- a/source/assets/stylesheets/_all.sass
+++ b/source/assets/stylesheets/_all.sass
@@ -11,6 +11,7 @@
 @import "_extras"
 @import "_layout"
 @import "_header"
+@import "_about"
 @import "_experience"
 @import "_skills"
 @import "_education"
